[trishna|nitin] almost fixed the overflow in the tag cloud

--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -190,8 +190,8 @@
     #advertisement{
         margin-left: auto;
         margin-right: auto;
-        width: 200px;
-        height: 200px;
+        width: 220px;
+        height: 220px;
         Background-color:#FFFFFF;
     }
 
@@ -200,10 +200,11 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom:10px;
-        width: 200px;
-        height:200px;
+        width: 220px;
+        height:220px;
         Background-color:#FFFFFF;
     }
+
 .errorMsg{
     color:#FF0000;
     }
